# lola-sumup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECRETS.adoc  dist-workspace.toml  justfile  release-plz.toml
.github/: dependabot.yml  renovate.json  rust-toolchain.toml
.github/workflows/: release-plz-pr.yml  release-plz.yml  release.yml  verify.yml
sample_config/: budget.toml
samples/: budget.toml  konten_202412_20250128132200.xls
src/: close.rs  close_xml.rs  export.rs  main.rs  prepare.rs  test_fixtures.rs  test_utils.rs
src/close/: close_xlsx.rs  close_xml.rs
src/export/: constraint.rs  export_accounting.rs  export_banana.rs  export_details.rs  export_miti.rs  export_summary.rs  posting.rs
