[package]
name = "lola-sumup"
version = "0.3.1"
authors = ["Urs Joss <urs.joss@gmx.ch>"]
edition = "2024"
description = "A cli program to create LoLa specific exports from monthly SumUp reports"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono= { version = "0.4.42", features = ["serde"] }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
quick-xml = { version = "0.38.3", features = ["serde"] }
toml = "0.9.6"
polars_excel_writer = "0.19.0"
calamine = { version = "0.30.1", features = ["dates"] }
rust_xlsxwriter = { version = "0.90.0", features = ["polars"] }

[dependencies.polars]
version = "0.51.0"
features = [
    "abs",
    "concat_str",
    "dtype-categorical",
    "dtype-date",
    "dtype-i128",
    "is_in",
    "lazy",
    "regex",
    "round_series",
    "semi_anti_join",
    "strings",
    "temporal",
    "timezones",
]

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[profile.dev]
opt-level=1

[profile.release]
lto = true
codegen-units = 1
strip = true
